		    - Finish the code documentation for the existing code
			- Get rid of all errors reported by the Visual Studio Intellisense

	- Browser Application Caching
		- Only index.html, ajs.js and ajs.boot.js need to be cached
		- Tool to update the manifest if the index.html, ajs.js or ajs.boot.js will change

	- Error handling, exceptions & exception rethrowing
		- Especially in templating and view component processings

	- Resource management
	    - remove resources older than
		- performance optiomizations
		   - creating the string of specified length in the StorageBrowser.cleanCache can be optimized for ES6
		   - multiple calls of getResource during single operation can be optimized
		   - review cycles


	- View, View Components, Visual Components
		- CSS style management
		   - LESS & reuired toolchain
		- ViewComponent._getState -> implement function to collect the state information from the view component tree
		- Dynamic View Component -> implement a component allowing to set the view component programatically, not just from template
		- Static content view component
		- Event subscriptions
		- View Component Finalization
		- Refactor ViewComponent properties to ajs... property name
		- Refactor ViewComponent state management to look nicer

	- Data
		- JSON API
		- Data caching
		- Data validation
		- Data binding

	- WebSockets

	- Language & Translation


	FAR FUTURE:
	- Caching of processed objects - especially visualComponents and view components??

	----

	Optimizations:
	
	A lot of optimizations can be done, at least:

	a) Template class - when it is getting components, children components and placeholders
	it is browsing the DOM structure multiple times. This can be done in a single step.

	b) ViewComponent - while creating a new array of components it calls functions to
	get viewcomponent constructor and visual constructor in the loop, this can be done just
	once

	c) if undefined && not null can be optimized at many places

	----
