@@ -46,7 +46,7 @@
     <TypeScriptCompile Include="js\ajs.d.ts" />
     <TypeScriptCompile Include="src\!ajsdoc.ts" />
     <TypeScriptCompile Include="src\components\AjsDocArticle.ts" />
-    <TypeScriptCompile Include="src\components\AjsDocBrowser.ts" />
+    <TypeScriptCompile Include="src\AjsDocBrowser.ts" />
     <TypeScriptCompile Include="src\components\AjsDoc.ts" />
     <TypeScriptCompile Include="src\components\AjsDocMember.ts" />
     <TypeScriptCompile Include="src\models\DocModel.ts" />
